@@ -6,4 +6,4 @@ $JAVA_HOME/bin/java --module-path mlib                       -m modmainbar/pkgma
 # but this does not work, throws RuntimeException: 
 #    java.lang.reflect.LayerInstantiationException: Package pkgbar in both module modbar2 and module modbar1
 # reason: modsplitbar1 and modsplitbar2 are both in the same Configuration
-$JAVA_HOME/bin/java --module-path mlib -addmods modsplitbar2 -m modmainbar/pkgmainbar.Main | myecho
+$JAVA_HOME/bin/java --module-path mlib --add-modules modsplitbar2 -m modmainbar/pkgmainbar.Main | myecho
